# hello-world

./: Makefile.am  README.md  a.c  a.out  banner.txt  citations.py  command_line_args.c  command_line_args.h  configuration_file.c  configuration_file.h  configure.ac  debug_log.c  debug_log.h  gettext.c  gettext.h  hello_world.c  hello_world.h  makefile  messages.c  messages.h  printf.c  printf.h  test.c  word_wrap.c  word_wrap.h
src/: Makefile  Makefile.am  Makefile.in  banner.txt  citations.py  command_line_args.c  command_line_args.h  configuration_file.c  configuration_file.h  debug_log.c  debug_log.h  description.txt  error.h  gettext.c  gettext.h  hello_world  hello_world.c  hello_world.conf  hello_world.h  messages.c  messages.h  printf.c  printf.h  word_wrap.c  word_wrap.h
tests/: Makefile.am  hello_simple_check.sh  word_wrap_check.c
