bin_PROGRAMS = hello_world
hello_world_SOURCES = command_line_args.c  configuration_file.c  debug_log.c  gettext.c  hello_world.c  messages.c  printf.c  word_wrap.h command_line_args.h  configuration_file.h  debug_log.h  gettext.h  hello_world.h  messages.h  printf.h  word_wrap.c
hello_world_LDADD = $(LIBINTL) $(top_builddir)/lib/libgnu.a
